--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-dotenv==1.0.0
 requests==2.31.0
 supabase==2.0.3
 pydantic==2.4.2
+pydantic-settings==2.0.3
 python-multipart==0.0.6
 httpx==0.24.1
 python-jose==3.3.0
