--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - SUPABASE_KEY=${SUPABASE_KEY}
       - EVOLUTION_API_URL=${EVOLUTION_API_URL}
       - EVOLUTION_API_KEY=${EVOLUTION_API_KEY}
-      - MCP_SERVER_URL=http://mcp-server:3000
-      - MCP_API_KEY=mcp-clinica-2024
+      - MCP_SERVER_URL=https://mcp-clinica-nas-nuvens.onrender.com/
+      - MCP_API_KEY=temp_key
     ports:
       - "3000:3000"
     networks:
